<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/teamA_TV"
            style="@style/MyTextView"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:contentDescription="@string/teamA"
            android:text="@string/teamA"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_guideline" />

        <TextView
            android:id="@+id/teamA_ScoreTV"
            style="@style/MyTextView.Score"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/zero"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamA_TV" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/dimen_1dp"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/teamA_OnePointButton"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/teamA_ThreePointButton"
            style="@style/MyButtonView"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/threePoints"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamA_ScoreTV" />

        <Button
            android:id="@+id/teamA_TwoPointButton"
            style="@style/MyButtonView"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/twoPoints"
            app:layout_constraintEnd_toEndOf="@+id/teamA_ThreePointButton"
            app:layout_constraintStart_toStartOf="@+id/teamA_ThreePointButton"
            app:layout_constraintTop_toBottomOf="@+id/teamA_ThreePointButton" />

        <Button
            android:id="@+id/teamA_OnePointButton"
            style="@style/MyButtonView"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/onePoint"
            app:layout_constraintEnd_toEndOf="@+id/teamA_TwoPointButton"
            app:layout_constraintStart_toStartOf="@+id/teamA_TwoPointButton"
            app:layout_constraintTop_toBottomOf="@+id/teamA_TwoPointButton" />

        <Button
            android:id="@+id/resetButton"
            style="@style/MyButtonView"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:contentDescription="@string/resetButtonDescription"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/teamB_TV"
            style="@style/MyTextView"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:contentDescription="@string/teamB"
            android:text="@string/teamB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline" />

        <TextView
            android:id="@+id/teamB_ScoreTV"
            style="@style/MyTextView.Score"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/teamB_TV" />

        <Button
            android:id="@+id/teamB_ThreePointButton"
            style="@style/MyButtonView"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:layout_marginRight="@dimen/dimen_24dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/threePoints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/teamB_ScoreTV" />

        <Button
            android:id="@+id/teamB_TwoPointButton"
            style="@style/MyButtonView"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/twoPoints"
            app:layout_constraintEnd_toEndOf="@+id/teamB_ThreePointButton"
            app:layout_constraintStart_toStartOf="@+id/teamB_ThreePointButton"
            app:layout_constraintTop_toBottomOf="@+id/teamB_ThreePointButton" />

        <Button
            android:id="@+id/teamB_OnePointButton"
            style="@style/MyButtonView"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/onePoint"
            app:layout_constraintEnd_toEndOf="@+id/teamB_TwoPointButton"
            app:layout_constraintStart_toStartOf="@+id/teamB_TwoPointButton"
            app:layout_constraintTop_toBottomOf="@+id/teamB_TwoPointButton" />

        <android.support.constraint.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen_124dp" />

        <ImageView
            android:id="@+id/teamA_ImageView"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/teamA_Image"
            app:layout_constraintBottom_toTopOf="@+id/top_guideline"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team_a" />

        <ImageView
            android:id="@+id/teamB_ImageView"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:contentDescription="@string/teamB_Image"
            app:layout_constraintBottom_toTopOf="@+id/top_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team_b" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>